--- a/index.html
+++ b/index.html
@@ -3,70 +3,185 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Camping Gear and Essentials</title>
+  <title>Camping Gear</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <header class="hero-section">
-    <nav class="navbar">
-      <div class="logo">LOGO</div>
+  <!-- Navigation -->
+  <nav class="navbar">
+    <div class="container">
+      <h1 class="logo">Camping Gear</h1>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
+        <li><a href="#About us">About</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
-    <div class="hero-content">
-      <h1>Camping Gear and Essentials</h1>
-      <p>Discover top-quality camping gear for unforgettable outdoor adventures.<br>Gear up and make lasting memories.</p>
-      <a href="#services" class="btn">Our Services</a>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <header id="home" class="hero">
+    <div class="overlay">
+      <div class="container">
+        <h1>Camping Gear and Essentials</h1>
+        <p>Discover top-quality camping gear for unforgettable outdoor adventures. <br> Gear up and make lasting memories.</p>
+        <button class="btn">Our Services</button>
+      </div>
     </div>
   </header>
+
+  <!-- Services Section -->
+  <section id="services" class="services">
+    <h2>Our Services</h2>
+    <p>Explore our wide range of camping gear services.</p>
+    <div class="services-grid">
+      <div class="service-card">
+        <img src="tents.jpg" alt="Tents">
+        <h3>Tents</h3>
+        <p>Experience comfort and protection with our high-quality camping tents.</p>
+      </div>
+      <div class="service-card">
+        <img src="backpacks.jpg" alt="Sleeping Bags">
+        <h3>Sleeping Bags</h3>
+        <p>Stay cozy and warm during your camping trips with our premium sleeping bags.</p>
+      </div>
+      <div class="service-card">
+        <img src="camping-1.jpg" alt="Camp Stoves">
+        <h3>Camp Stoves</h3>
+        <p>Cook delicious meals in the great outdoors with our reliable camp stoves.</p>
+      </div>
+      <div class="service-card">
+        <img src="backpacks.jpg" alt="Backpacks">
+        <h3>Backpacks</h3>
+        <p>Carry all your essentials with durable and spacious backpacks.</p>
+      </div>
+      <div class="service-card">
+        <img src="camping-2.jpg" alt="Lanterns">
+        <h3>Lanterns</h3>
+        <p>Light up your camping site with our high-quality lanterns.</p>
+      </div>
+      <div class="service-card">
+        <img src="light.jpg" alt="Lanterns">
+        <h3>Lanterns</h3>
+        <p>Light up your camping site with our high-quality lanterns.</p>
+      </div>
+    </div>
+
+  <!-- Portfolio Section -->
+<section id="portfolio" class="portfolio">
+  <h2>Our Portfolio</h2>
+  <p>Take a look at some of our memorable camping adventures.</p>
+  <div class="portfolio-grid">
+    <div class="portfolio-card">
+      <img src="camping-3.jpg" alt="Mountain Hiking">
+      <h3>Mountain Hiking</h3>
+      <p>Embark on an exhilarating hiking adventure in the breathtaking ranges.</p>
+    </div>
+    <div class="portfolio-card">
+      <img src="camping-4.jpg" alt="Lakeside Camping">
+      <h3>Lakeside Camping</h3>
+      <p>Enjoy a tranquil camping experience by the serene shores of picturesque lakes.</p>
+    </div>
+    <div class="portfolio-card">
+      <img src="camping-5.jpg" alt="Beach Camping">
+      <h3>Beach Camping</h3>
+      <p>Escape to sandy beaches and camp under the starry sky by crashing waves.</p>
+    </div>
+    <div class="portfolio-card">
+      <img src="camping-4.jpg" alt="Forest Trekking">
+      <h3>Forest Trekking</h3>
+      <p>Immerse yourself in lush greenery and explore the wild on foot.</p>
+    </div>
+    <div class="portfolio-card">
+      <img src="camping-6.jpg" alt="RV Camping">
+      <h3>RV Camping</h3>
+      <p>Experience luxury camping with the comfort of a fully-equipped RV.</p>
+    </div>
+    <div class="portfolio-card">
+      <img src="chair.jpg" alt="Desert Camping">
+      <h3>Desert Camping</h3>
+      <p>Camp under the vast starry skies in the heart of the desert.</p>
+    </div>
+  </div>
+  <section id="About us" class="About us">
+  <div class="containers">
+      <h1>About Us</h1>
+      <p class="subtitle">Discover our story in providing camping services.</p>
+
+      <div class="section">
+        <h2>Our Story</h2>
+        <p>
+          Experience the excellence of our camping gear and services, where we have been offering high-quality camping essentials and gear for outdoor enthusiasts for over a decade. Our commitment to quality and customer satisfaction ensures that every adventurer can rely on us for their camping needs.
+        </p>
+      </div>
+
+      <div class="section">
+        <h2>Our Mission</h2>
+        <p>
+          At Camping Gear Experts, our mission is to equip outdoor enthusiasts with top-notch camping gear and essentials that enhance their outdoor experiences. We strive to provide reliable, durable, and innovative products that contribute to memorable adventures and lasting memories.
+        </p>
+      </div>
+
+      <div class="section">
+        <h2>Our Vision</h2>
+        <p>
+          Our vision is to become the go-to destination for camping enthusiasts, known for our extensive selection of premium camping gear and exceptional customer service. We aspire to inspire and enable people to embrace the beauty of nature and create unforgettable camping experiences.
+        </p>
+      </div>
+
+      <div class="section team">
+        <h2>Our Team</h2>
+        <ul>
+          <li>John Doe - Founder and CEO</li>
+          <li>Jane Smith - Gear Specialist</li>
+          <li>Mark Johnson - Customer Representative</li>
+          <li>Sarah Brown - Operations Manager</li>
+        </ul>
+      </div>
+    </div>
+
+<section id="contact" class="contact-section">
+  <div class="container">
+    <!-- Informations de contact -->
+    <div class="contact-info">
+      <h2>Contact Us</h2>
+      <p>Reach out to us for any inquiries or feedback.</p>
+      <ul>
+        <li><i class="fas fa-map-marker-alt"></i> 123 Campsite Avenue, Wilderness, CA 98765</li>
+        <li><i class="fas fa-envelope"></i> info@campinggearexperts.com</li>
+        <li><i class="fas fa-phone"></i> (123) 456-7890</li>
+        <li><i class="fas fa-clock"></i> Monday - Friday: 9:00 AM - 5:00 PM</li>
+        <li><i class="fas fa-clock"></i> Saturday: 10:00 AM - 3:00 PM</li>
+        <li><i class="fas fa-clock"></i> Sunday: Closed</li>
+        <li><i class="fas fa-globe"></i> www.codingnepalweb.com</li>
+      </ul>
+    </div>
+
+    <!-- Formulaire de contact -->
+    <div class="contact-form">
+      <form action="#">
+        <input type="text" name="name" placeholder="Name*" required>
+        <input type="email" name="email" placeholder="Email*" required>
+        <textarea name="message" placeholder="Message*" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>Copyright © 2023 All Rights Reserved</p>
+    <div class="footer-links">
+      <a href="#">Home</a>
+      <a href="#">Contact</a>
+    </div>
+  </footer>
+</section>
+
+  </section>
+
   <script src="script.js"></script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <section class="services-section">
-        <div class="container">
-          <h2>Our Services</h2>
-          <p>Explore our wide range of camping gear services.</p>
-          <div class="services-grid">
-            <div class="service-card">
-              <img src="tents.jpg" alt="Tents">
-              <h3>Tents</h3>
-              <p>Experience comfort and protection with our high-quality camping tents.</p>
-            </div>
-            <div class="service-card">
-              <img src="sleeping-bags.jpg" alt="Sleeping Bags">
-              <h3>Sleeping Bags</h3>
-              <p>Stay cozy and warm during your camping trips with our premium sleeping bags.</p>
-            </div>
-            <div class="service-card">
-              <img src="camp-stoves.jpg" alt="Camp Stoves">
-              <h3>Camp Stoves</h3>
-              <p>Cook delicious meals in the great outdoors with our reliable camp stoves.</p>
-            </div>
-            <div class="service-card">
-              <img src="backpacks.jpg" alt="Backpacks">
-              <h3>Backpacks</h3>
-              <p>Carry your essentials comfortably with our durable backpacks.</p>
-            </div>
-            <div class="service-card">
-              <img src="lanterns.jpg" alt="Lanterns">
-              <h3>Lanterns</h3>
-              <p>Light up your campsite with our energy-efficient lanterns.</p>
-            </div>
-          </div>
-        </div>
-      </section>      
 </body>
 </html>
